--- a/index.html
+++ b/index.html
@@ -59,14 +59,8 @@
         </div>
         <div class="about__achievements">
             <div class="achievements__video-container">
-                <iframe width="496" height="276" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
-                <iframe width="496" height="276" src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
+                <iframe width="496" height="276" src="https://www.youtube.com/embed/JVxCkyjs2Q4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="496" height="276" src="https://www.youtube.com/embed/ZgfiIdQsrN8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <ul class="achievements__container">
                 <li class="achievements__item list-reset">
