refactoring: удалил неиспользуемые шрифты

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <nav class="nav">
         <img class="nav__logo" src="./img/logo_urfu.png" alt="logo_urfu">
         <ul class="nav__list">
-            <li class="list-reset nav__item">
+            <li class=" nav__item">
                 <a class="nav__link" href="#">Об&nbsp;институте</a>
             </li>
-            <li class="list-reset nav__item">
+            <li class=" nav__item">
                 <a class="nav__link" href="#">Как поступить</a>
             </li>
-            <li class="list-reset nav__item">
+            <li class=" nav__item">
                 <a class="nav__link" href="#">Программы</a>
             </li>
-            <li class="list-reset nav__item">
+            <li class=" nav__item">
                 <a class="nav__link" href="#">FAQ</a>
             </li>
-            <li class="list-reset nav__item">
+            <li class=" nav__item">
                 <a class="nav__link" href="#">Контакты</a>
             </li>
         </ul>
@@ -66,21 +66,21 @@
                     <iframe width="496" height="276" src="https://www.youtube.com/embed/ZgfiIdQsrN8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <ul class="achievements__container">
-                    <li class="achievements__item list-reset">
+                    <li class="achievements__item ">
                         <div class="item__count">25</div>
                         <div class="item__block">
                             <span class="item__line"></span>
                         </div>
                         <div class="item__title">Российских и&nbsp;зарубежных академических партнеров</div>
                     </li>
-                    <li class="achievements__item list-reset">
+                    <li class="achievements__item ">
                         <div class="item__count">20</div>
                         <div class="item__block">
                             <span class="item__line"></span>
                         </div>
                         <div class="item__title">Крупных индустриальных партнеров</div>
                     </li>
-                    <li class="achievements__item list-reset">
+                    <li class="achievements__item ">
                         <div class="item__count">150</div>
                         <div class="item__block">
                             <span class="item__line"></span>
@@ -105,7 +105,7 @@
             </div>
             <div class="enter__block">
                 <ul class="enter__list">
-                    <li class="enter__item list-reset">
+                    <li class="enter__item ">
                         <div class="item__head_block">
                             <span class="item__step">1</span>
                             <h3 class="item__title">Узнайте о&nbsp;поступлении</h3>
@@ -133,7 +133,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="enter__item enter__item--with_link list-reset">
+                    <li class="enter__item enter__item--with_link ">
                         <div class="item__head_block">
                             <span class="item__step">2</span>
                             <h3 class="item__title">Выберите образовательную программу</h3>
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="enter__item enter__item--with_link list-reset">
+                    <li class="enter__item enter__item--with_link ">
                         <div class="item__head_block">
                             <span class="item__step enter__item--red">3</span>
                             <h3 class="item__title">Подайте документы</h3>
@@ -165,7 +165,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="enter__item list-reset">
+                    <li class="enter__item ">
                         <div class="item__head_block">
                             <span class="item__step">4</span>
                             <h3 class="item__title">Пройдите вступительные испытания</h3>
