--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <img class="nav__logo" src="./img/logo_urfu.png" alt="logo_urfu">
         <ul class="nav__list">
             <li class=" nav__item">
-                <a class="nav__link" href="#">Об&nbsp;институте</a>
+                <a class="nav__link" href="#about">Об&nbsp;институте</a>
             </li>
             <li class=" nav__item">
-                <a class="nav__link" href="#">Как поступить</a>
+                <a class="nav__link" href="#enter">Как поступить</a>
             </li>
             <li class=" nav__item">
                 <a class="nav__link" href="#">Программы</a>
@@ -48,11 +48,13 @@
         </div>
     </section>
     <div class="content">
-        <section class="about">
+        <section class="about" id="about">
             <div class="about__description">
                 <h2 class="about__title section_title">Об&nbsp;институте</h2>
                 <p class="about__text">
-                    ХТИ - это глубокие научные и образовательные традиции, а также высококвалифицированные сотрудники, обладающие богатым опытом в решении разноплановых фундаментальных и прикладных задач в области современной химии и химической технологии.
+                    ХТИ - это глубокие научные и образовательные традиции, а также высококвалифицированные сотрудники,
+                    обладающие богатым опытом в решении разноплановых фундаментальных и прикладных задач в области
+                    современной химии и химической технологии.
                 </p>
                 <div class="about__link">
                     <a class="link" href="#">Посетить сайт института</a>
@@ -62,8 +64,14 @@
             </div>
             <div class="about__achievements">
                 <div class="achievements__video-container">
-                    <iframe width="496" height="276" src="https://www.youtube.com/embed/JVxCkyjs2Q4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <iframe width="496" height="276" src="https://www.youtube.com/embed/ZgfiIdQsrN8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="496" height="276" src="https://www.youtube.com/embed/JVxCkyjs2Q4"
+                            title="YouTube video player"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    <iframe width="496" height="276" src="https://www.youtube.com/embed/ZgfiIdQsrN8"
+                            title="YouTube video player"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
                 </div>
                 <ul class="achievements__container">
                     <li class="achievements__item ">
@@ -92,7 +100,7 @@
         </section>
 
 
-        <section class="enter">
+        <section class="enter" id="enter">
             <div class="enter__header">
                 <h2 class="enter__title section_title">Как поступить?</h2>
                 <div class="toggler">
@@ -199,7 +207,6 @@
 <footer class="footer">
     <span class="footer__line"></span>
 </footer>
-<div id="app"></div>
 <script type="module" src="/scripts/main.js"></script>
 </body>
 </html>
